--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   
   firebase_core: ^2.10.0
   cloud_firestore: ^4.5.2
-  json_serializable: ^6.6.1
+  firebase_auth: ^4.4.2
 
 dev_dependencies:
   flutter_test:
