--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.10.0
   cloud_firestore: ^4.5.2
   firebase_auth: ^4.4.2
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_test:
