--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,4 +71,5 @@ flutter {
 dependencies {
     implementation 'com.google.firebase:firebase-bom:30.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
