--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  
+
   firebase_core: ^2.10.0
   cloud_firestore: ^4.5.2
   firebase_auth: ^4.4.2
   google_sign_in: ^6.1.0
   google_sign_in_web: ^0.12.0
+  collection: ^1.17.0
 
 dev_dependencies:
   flutter_test:
