--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
 
   flutter_local_notifications: ^9.7.0
   firebase_messaging: ^14.5.0
+  pedometer: ^2.2.2
+  background_fetch: ^0.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
