--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.1.0
   google_sign_in_web: ^0.12.0
   collection: ^1.17.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
