--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_local_notifications: ^9.7.0
+  flutter_local_notifications: ^14.1.1
   firebase_messaging: ^14.5.0
-  pedometer: ^2.2.2
-  background_fetch: ^0.6.0
+  background_fetch: ^1.1.6
+  pedometer: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +42,9 @@ dependencies:
   
   firebase_core: ^2.10.0
   cloud_firestore: ^4.5.2
+  file_picker: ^5.3.1
+  excel: ^2.1.0
+  uuid: ^3.0.7
 
 
 dev_dependencies:
