--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   google_sign_in_web: ^0.12.0
   collection: ^1.17.0
   provider: ^6.0.5
+  pedometer: ^4.0.1
+  file_picker: ^5.3.1
+  excel: ^2.1.0
+  uuid: ^3.0.7
+  native_notify: ^0.0.3
 
 dev_dependencies:
   flutter_test:
