--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   excel: ^2.1.0
   uuid: ^3.0.7
   native_notify: ^0.0.3
+  background_fetch: ^1.1.3
 
 dev_dependencies:
   flutter_test:
