--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_local_notifications: ^9.7.0
-  firebase_messaging: ^14.5.0
+  flutter_local_notifications: ^15.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  firebase_core: ^2.10.0
-  cloud_firestore: ^4.5.2
-  firebase_auth: ^4.4.2
+  firebase_core: ^1.13.1
+  cloud_firestore: ^3.1.7
+  firebase_auth: ^3.3.6
   google_sign_in: ^6.1.0
   google_sign_in_web: ^0.12.0
   collection: ^1.17.0
@@ -48,8 +47,11 @@ dependencies:
   file_picker: ^5.3.1
   excel: ^2.1.0
   uuid: ^3.0.7
-  native_notify: ^0.0.3
+  native_notify: ^0.0.17
   background_fetch: ^1.1.3
+  firebase_core_platform_interface: 4.5.1
+  firebase_messaging: ^11.2.6
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
